@@ -407,31 +407,54 @@ KeyMap_B=Down
 KeyMap_C=Enter
 KeyMap_D=Escape
 
-# t6963: Parallel port to use [default: 0x378; legal: 0x200 - 0x400]
+# --- t6963 options ---
+
+# Parallel port to use [default: 0x378; legal: 0x200 - 0x400]
 #Port=0x378
 
-# t6963: Use LPT port in bi-directional mode. This should work on most LPT port
+# Use LPT port in bi-directional mode. This should work on most LPT port
 # and is required for proper timing! [default: yes; legal: yes, no]
 #bidirectional=yes
 
-# t6963: Insert additional delays into reads / writes. [default: no;
-# legal: yes, no]
+# Insert additional delays into reads / writes. [default: no; legal: yes, no]
 #delayBus=no
 
-# serdisplib: Name of the underlying serdisplib driver, e.g. ctinclud. See
+# --- serdisplib options ---
+
+# Name of the underlying serdisplib driver, e.g. ctinclud. See
 # serdisplib documentation for details.
 serdisp_name=t6963
 
-# serdisplib: The display device to use, e.g. serraw:/dev/ttyS0,
+# The display device to use, e.g. serraw:/dev/ttyS0,
 # parport:/dev/parport0 or USB:07c0/1501.
 serdisp_device=/dev/ppi0
 
-# serdisplib: Options string to pass to serdisplib during initialization. Use
+# Options string to pass to serdisplib during initialization. Use
 # this to set any display related options (e.g. wiring). The display size is
 # always set based on the Size configured above! By default, no options are
 # set.
 # Important: The value must be quoted as it contains equal signs!
 #serdisp_options="INVERT=1"
+
+# --- x11 options ---
+
+# PixelSize is size of each dot in pixels + a pixel gap. [default: 3+1]
+#x11_PixelSize=3+1
+
+# Colors are in RRGGBB format prefixed with "0x".
+# PixelColor: The color of each dot at full contrast. [default: 0x000000]
+#x11_PixelColor=0x000000
+
+# BacklightColor: The color of the backlight as full brightness.
+# [default: 0x80FF80]
+#x11_BacklightColor=0x80FF80
+
+# Border: Adds a border (empty space) around the LCD portion of X11 window.
+# [default: 20]
+#x11_Border=20
+
+# Inverted: inverts the pixels [default: no; legal: yes, no]
+#x11_Inverted=no
 
 
 
